--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Eagle+Lake|Great+Vibes|Lovers+Quarrel&display=swap" rel="stylesheet">
 
     <title>Lesley</title>
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-custom">
-      <a class="navbar-brand" href="#">Lesley</a>
+      <a class="navbar-brand" href="#">L</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,59 +28,64 @@
       </div>
     </nav>
 
-    <!-- Body of website -->
-    <div class="container">
-
-      <!-- About -->
-      <div class="container about-container">
-        <h1>Hi, I'm Lesley!</h1>
-        <h4>full stack web developer</h4>
-
-        <h3>Hi!</h3>
-        <h4>I'm a full stack web developer based in Florida.</h4>
-        <h6>moving to Japan soon!</h6>
-        <h4>I have a passion for creating dynamic web apps.</h4>
+    <!-- Jumbotron -->
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-3">Hi, I'm Lesley!</h1>
+        <p class="lead">full stack web developer</p>
+        <br />
+        <br />
+        <h1 class="display-4">Hi, I'm Lesley!</h1>
+        <p class="lead">full stack web developer</p>
       </div>
+    </div>
 
-      <!-- Work -->
-      <div class="container container-work">
-        <h3>Check out my work</h3>
+    <!-- About -->
+    <div class="container about-container">
+      <h3>Hi!</h3>
+      <h4>I'm a full stack web developer based in Florida.</h4>
+      <h6>moving to Japan soon!</h6>
+      <h4>I have a passion for creating dynamic web apps.</h4>
+    </div>
 
-        <div class="card-container">
-          <!-- Card 1 -->
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+    <!-- Work -->
+    <div class="container container-work">
+      <h3>Here's what I've been up to</h3>
 
-          <!-- Card 2 -->
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-
-          <!-- Card 3 -->
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+      <div class="card-container">
+        <!-- Card 1 -->
+        <div class="card" style="width: 18rem;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
 
+        <!-- Card 2 -->
+        <div class="card" style="width: 18rem;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="card" style="width: 18rem;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
       </div>
 
     </div>
+
 
 
     <!-- Optional JavaScript -->
