fixed color issues

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- About -->
     <div class="container about-container">
-      <h3>Hi!</h3>
+      <h3 class="display-5">Hi!</h3>
       <h4>I'm a full stack web developer based in Florida.</h4>
       <h6>moving to Japan soon!</h6>
       <h4>I have a passion for creating dynamic web apps.</h4>
@@ -50,11 +50,11 @@
 
     <!-- Work -->
     <div class="container container-work">
-      <h3>Here's what I've been up to</h3>
+      <h3 class="display-6">Here's what I've been up to</h3>
 
       <div class="card-container">
         <!-- Card 1 -->
-        <div class="card" style="width: 18rem;">
+        <div class="card bg-custom" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -64,7 +64,7 @@
         </div>
 
         <!-- Card 2 -->
-        <div class="card" style="width: 18rem;">
+        <div class="card bg-custom" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -74,7 +74,7 @@
         </div>
 
         <!-- Card 3 -->
-        <div class="card" style="width: 18rem;">
+        <div class="card bg-custom" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
