added footer and changes

--- a/index.html
+++ b/index.html
@@ -14,84 +14,96 @@
     <title>Lesley</title>
   </head>
   <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-custom">
-      <a class="navbar-brand" href="#">L</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">about<span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">work</a>
-        </div>
+    <div class="page-container">
+      <!-- Navbar -->
+      <div class="nav-wrapper">
+        <nav class="navbar navbar-expand-md navbar-dark bg-custom">
+          <a class="navbar-brand" href="#">L</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link active" href="#">about<span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link" href="#">work</a>
+            </div>
+          </div>
+        </nav>
       </div>
-    </nav>
 
-    <!-- Jumbotron -->
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-3">Hi, I'm Lesley!</h1>
-        <p class="lead">full stack web developer</p>
-        <br />
-        <br />
-        <h1 class="display-4">Hi, I'm Lesley!</h1>
-        <p class="lead">full stack web developer</p>
-      </div>
-    </div>
-
-    <!-- About -->
-    <div class="container about-container">
-      <h3 class="display-5">Hi!</h3>
-      <h4>I'm a full stack web developer based in Florida.</h4>
-      <h6>moving to Japan soon!</h6>
-      <h4>I have a passion for creating dynamic web apps.</h4>
-    </div>
-
-    <!-- Work -->
-    <div class="container container-work">
-      <h3 class="display-6">Here's what I've been up to</h3>
-
-      <div class="card-container">
-        <!-- Card 1 -->
-        <div class="card bg-custom" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-
-        <!-- Card 2 -->
-        <div class="card bg-custom" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-
-        <!-- Card 3 -->
-        <div class="card bg-custom" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+      <!-- Jumbotron -->
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-3">Hi, I'm Lesley!</h1>
+          <p class="lead">full stack web developer</p>
+          <br />
+          <br />
+          <h1 class="display-4">Hi, I'm Lesley!</h1>
+          <p class="lead">full stack web developer</p>
         </div>
       </div>
 
+      <!-- About -->
+      <div class="container about-container">
+        <h3 class="display-5">Hello!</h3>
+        <h4>I'm a full stack web developer based in Florida.</h4>
+        <h6>moving to Japan soon!</h6>
+        <h4>I have a passion for creating dynamic web apps.</h4>
+      </div>
+
+      <!-- Work -->
+      <div class="container container-work">
+        <h3 class="display-6">Here's what I've been up to</h3>
+
+        <div class="card-container">
+          <!-- Card 1 -->
+          <div class="card bg-custom" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+          <!-- Card 2 -->
+          <div class="card bg-custom" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+          <!-- Card 3 -->
+          <div class="card bg-custom" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <footer>
+        <p>
+          Here is my footer
+        </p>
+
+      </footer>
+
     </div>
 
 
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
