testing issue with github

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
 
       <!-- Footer -->
-      <footer>
+      <footer class="footer">
         <p>
           Here is my footer
         </p>
