--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
       </div>
 
       <!-- Footer -->
-      <footer class="footer">
+      <div class="footer">
         <p>
           Here is my footer
         </p>
 
-      </footer>
+      </div>
 
     </div>
 
