assets and links added

--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
       <!-- Jumbotron -->
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-3">Hi, I'm Lesley!</h1>
-          <p class="lead">full stack web developer</p>
-          <br />
-          <br />
           <h1 class="display-4">Hi, I'm Lesley!</h1>
           <p class="lead">full stack web developer</p>
         </div>
@@ -53,26 +49,28 @@
 
       <!-- Work -->
       <div class="container container-work">
-        <h3 class="display-6">Here's what I've been up to</h3>
-
+        <h3 class="display-5">Here's what I've been up to:</h3>
         <div class="card-container">
+
           <!-- Card 1 -->
           <div class="card bg-custom" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="assets/pocket-plot.png" class="card-img-top" alt="pocket-plot">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">The Pocket Plot</h5>
+              <p class="card-text">A simple web app that helps users create and maintain their own plot for crops at home.</p>
+              <p class="card-text">A work in progress.</p>
+              <a href="https://github.com/lesley43/mern" class="btn btn-primary">Check it out</a>
             </div>
           </div>
 
           <!-- Card 2 -->
           <div class="card bg-custom" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="assets/lotr-forum.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">LOTR Forum</h5>
+              <p class="card-text">A fun little web app that utilizes React and MongoDB Atlas.</p>
+              <p class="card-text">A work in progress.</p>
+              <a href="https://github.com/lesley43/lotr-forum" class="btn btn-primary">Check it out</a>
             </div>
           </div>
 
@@ -80,9 +78,9 @@
           <div class="card bg-custom" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Next Project</h5>
+              <p class="card-text">Coming soon!</p>
+              <a href="#" class="btn btn-primary">Check back</a>
             </div>
           </div>
 
@@ -91,10 +89,11 @@
 
       <!-- Footer -->
       <div class="footer">
-        <p>
-          Here is my footer
-        </p>
-
+        <a href="https://github.com/lesley43">
+          <div class="footer-link">
+            Github
+          </div>
+        </a>
       </div>
 
     </div>
